--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Slack App Web Gui</title>
     <link rel="stylesheet" href="static/styles.css">
     <script src="static/scripts.js"></script>
 </head>
@@ -25,6 +25,14 @@
                 <th>Channel id</th>
                 <th>Whitelist</th>
             </tr>
+            {% for row in all_data_dict %}
+            <tr>
+                <td>{{ row.id }}</td>
+                <td>{{ row.channel }}</td>
+                <td>{{ row.whitelist|join(", ") }}</td>
+                <td><a href="/delete/{{ row.id }}">Delete</a></td>
+            </tr>
+            {% endfor %}
         </table>
     </div>
 </body>
