--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,8 @@
 .container {
     margin: 50px auto;
+    display: flex;
+    justify-content: space-evenly;
+    flex-flow: row wrap;
 }
 
 .container>form {
