Some UI changes

--- a/static/styles.css
+++ b/static/styles.css
@@ -17,12 +17,15 @@ header {
     align-items: center;
 }
 
-.container > form > * {
+.container>form>* {
     margin: 10px;
 }
 
 
-table, th, tr, td {
+table,
+th,
+tr,
+td {
     border: 1px solid black;
 }
 
@@ -32,7 +35,7 @@ table, th, tr, td {
     margin: 10px;
 }
 
-.panel > *{
+.panel>* {
     width: 80%;
     padding: 5px;
 }
@@ -45,15 +48,36 @@ table, th, tr, td {
 }
 
 #checkbox {
-    min-width: 250px;
-    max-width: 300px;
+    min-width: 200px;
+    max-width: 600px;
+    padding: 0 10px;
     min-height: 150px;
-    max-height: 200px;
+    max-height: 300px;
     overflow: scroll;
 }
 
+#checkbox .checkbox-option {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+#checkbox .checkbox-option:nth-child(odd) {
+    background-color: rgba(170, 170, 170, 0.5)
+}
+
+#checkbox span.email {
+    font-size: 0.8rem;
+    text-justify: right;
+}
+
+
+
 .edit-panel {
-/*   margin: 0 auto; */
+    /*   margin: 0 auto; */
     width: 300px;
     position: absolute;
     left: 50%;
@@ -71,7 +95,7 @@ table, th, tr, td {
     flex-flow: column;
 }
 
-.edit-panel form > * {
+.edit-panel form>* {
     margin: 5px;
 }
 
