--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,8 @@
     <div class="container">
         <form id="add_channel" class="panel" action="channels" method="POST">
             <label for="channel">Chanel id</label>
-            <input type="text" name="channels" placeholder="Chanel id" list='channel_list' required autocomplete="off"/>
+            <input type="text" name="channels" placeholder="Chanel id" list='channel_list' required
+                autocomplete="off" />
             <datalist id="channel_list">
                 {% for channel in channels %}
                 <option value="{{ channel.id }}">{{ channel.name }}</option>
@@ -45,7 +46,12 @@
                 {% for user in users %}
                 <div class="checkbox-option">
                     <input type="checkbox" id="{{ user.name }}" name="{{ user.id }}">
-                    <label for="{{ user.name }}">{{ user.name }}</label>
+                    <label for="{{ user.name }}">{{ user.name }}
+                        {% if user.profile.email %}
+                        <br>
+                        <span class="email">{{ user.profile.email|lower }}</span>
+                        {% endif %}
+                    </label>
                 </div>
                 {% endfor %}
             </div>
