--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
             <label for="whitelist">List of whitelisted users</label>
             <input type="text" id="whitelist" name="whitelist" placeholder="List of whitelisted users" />
             <div id="checkbox">
-                <input type="text" id="filter_input" placeholder="Filter" autocomplete="off" />
+                <input type="search" id="filter_input" placeholder="Filter" autocomplete="off" />
                 <table>
                     {% for user in users %}
                     <tr class="checkbox-option">
